--- a/livres.html
+++ b/livres.html
@@ -326,20 +326,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 20
+    <!--Livre 20-->
     <figure>
-      <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2290161179/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/51RrsAS94wL.jpg" alt="Sa Mère"
+      <a href="https://www.amazon.fr/Guerriers-lHiver-Olivier-Norek/dp/2749947200/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21PHP49G7WOX7&dib=eyJ2IjoiMSJ9.8nhQdi0LBbKzKLUps3O-NzwXjzC3rOpWiwJhvHkKJdmaxXS4EtjC5DbehzwvX9YJG52GXtxgPN6XNAw_X2L9I4Rjc0qrtIY0szuY_-ph4ZYaGzTLwa7AGmF9diPzk7loQdpWeyx1T5-rL5bfXZ9fFlX5ljX4ohXoYu6glF2KDD_KdX-xg0_ugFtV70W6cncc64WYzLY1jhxTtlo7hITUucUybIg_LywIjQIgPN9408Jb5jImFrX4r4I0aV-iKvvOIUbCIAyPzZYRInzOEGkp9NHsnQEHhDZ_6E-Iw_lysMec3HhO6M3ZPzkocQ5sVptg4-GLZv9dMQI9FXIyeTe-g-oonBvP-3Fn96sMSEKVopoNHmGwrcuMIs0Y6T-8Slztei-rQjcUhB2n2lVJL-UhJxJnS-7YcVpJCwsmHrAqmCnhZRQftyqp5r7JnvNxFVaK.3nC-MkjE7EswXxWUZLQNp4Um1AqB5zWfweqPXETbuSs&dib_tag=se&keywords=norek&qid=1738232400&sprefix=norek%2Caps%2C104&sr=8-2" target="_blank"> <img src="https://m.media-amazon.com/images/I/512GdQV4FxL._SL1287_.jpg" alt="Olivier Norek"
           class="books" /></a>
       <figcaption>
-        Saphia Azzeddine
+        Olivier Norek
       </figcaption>
       <figcaption>
-        Sa mère
+        Les Guerriers de l'Hiver
       </figcaption>
       <figcaption>
-        7,10€
+        21,95€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
@@ -559,20 +559,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 34
+    <!--Livre 34-->
     <figure>
-      <a href="https://www.amazon.fr/Histoire-Juif-errant-Jean-dOrmesson/dp/2070385787/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=jean+d%27ormesson+histoire+du+juif+errant&qid=1559690669&s=gateway&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/91sd4efXQfL.jpg" alt="Histoire du Juif errant" class="books" /></a>
+      <a href="https://www.amazon.fr/Fort-Alamo-Fabrice-Caro/dp/2073085156/ref=sr_1_1?crid=14I2UAQAQAAJG&dib=eyJ2IjoiMSJ9.-y0JguVGhPsNla4KZoBp_rZcrDGyqkLBN5PBCpfV5FPYCtnjEJyJT7EqBj_4IOwOm7-tLXGxDOol148ShmECoSIPvbhlQ3rzEzptSuaincBMT74Ldt7BpxD4tpyCfO2v.OBHuz2S10akCde3c6gTCzBehn-5KIqRaVxhmcoRaIec&dib_tag=se&keywords=fort+alamo+fabrice+caro&nsdOptOutParam=true&qid=1737102325&sprefix=fort+%2Caps%2C554&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/91Nh7pc0wNL._SL1500_.jpg" alt="Fort Alamo" class="books" /></a>
       <figcaption>
-        Jean d'Ormesson
+        Fabrice Caro
       </figcaption>
       <figcaption>
-        Histoire du Juif errant
+        Fort Alamo
       </figcaption>
       <figcaption>
-        10,90€
+        19,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 35-->
     <figure>
@@ -782,8 +782,8 @@
 
     <!--Livre 48-->
     <figure>
-      <a href="https://www.amazon.fr/Lenrag%C3%A9-Sorj-Chalandon/dp/2246834678/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=OSTRD2A86IBS&keywords=l%27enrag%C3%A9&qid=1692570147&sprefix=l%27enrag%C3%A9%2Caps%2C81&sr=8-1" target="_blank">
-        <img src="https://m.media-amazon.com/images/I/61cHZDnzWkL.jpg" alt="L'enragé" class="books" /></a>
+      <a href="https://www.amazon.fr/LEnrag%C3%A9-Sorj-Chalandon/dp/2253249149/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1692570147&sr=8-1" target="_blank">
+        <img src="https://m.media-amazon.com/images/I/81QxWex6VaL._SL1500_.jpg" alt="L'enragé" class="books" /></a>
       <figcaption>
         Sorj Chalandon
       </figcaption>
@@ -791,7 +791,7 @@
         L'enragé
       </figcaption>
       <figcaption>
-        22,50€
+        9,90€
       </figcaption>
     </figure>
   </div>
@@ -959,20 +959,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 59
+    <!--Livre 59-->
     <figure>
-      <a href="https://www.amazon.fr/M%C3%A9moires-dun-perfectionniste-Jonny-Wilkinson/dp/2290081183/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://m.media-amazon.com/images/I/611OhgTF7FL.jpg" alt="Wilkinson"
+      <a href="https://www.amazon.fr/Shell-Shock-Micha%C3%ABla-Watteaux/dp/2017307416/ref=sr_1_1?crid=4P719ZSRW7Y3&dib=eyJ2IjoiMSJ9.zHe8Ye1_ZB0_w-qZT_-3l7VO04PRpNEOZqSUM55sPbQ85jJhkS_XUXyFOgaSMXXgWAzNSlgox1zBhFEE3oc_awPkGpa3Pi1J5a9dXDz0nXwpx84NiG6b69dzkh2gVrRKaOlMKUFXJT4kcnLiEMxtU34P3a2xdO9N9EUCkgy_QEiyNMPklNXdyp_w-tnPjZGyyh-QpQ1rkWMMwgLrR0Lxk9XqG9zhYUHuLE3IFNIY9wV-yLIwa1wff6N03n-sPSNA7gH3c59ir2r3vf96I7QHaJzXWrr3gLqbwOLEjvU9jZWNPVYnEkvXhtfZrHis0yIIrDeGoAYS-WOxPAe1zqcTThXxlR3kmkS9JfCJV5Awvw8MW76KCcaDDnjp-kjwrxV_dJFGbBK5Uh8GfVB5FouX3svtgcU5pCo2NQ6CNZY6NCgX3nZC31gmLdrFZ3CUAOcV.KTuX7pCMquThtf4bPVWp-TVzssREcxR8AKJ8Uh9rYx4&dib_tag=se&keywords=shell+shock&qid=1738232913&sprefix=shell+s%2Caps%2C243&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/71iBy547hGL._SL1500_.jpg" alt="Shell Shock"
           class="books" /></a>
       <figcaption>
-        Jonny Wilkinson
+        Michaëla Watteaux
       </figcaption>
       <figcaption>
-        Mémoires d'un perfectionniste
+        Shell Shock
       </figcaption>
       <figcaption>
-        8,80€
+        21,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 60
     <figure>
@@ -2573,20 +2573,23 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Premi%C3%A8re-personne-Conversations-Vladimir-Poutine/dp/2955290033/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=30COX288OOODO&keywords=poutine&qid=1650420430&sprefix=poutine%2Caps%2C67&sr=8-2"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71o7UsCDKcL.jpg" alt="VLADIMIR POUTINE: Première personne" class="books" /></a>
+      <a href="https://www.amazon.fr/Nous-nous-parlons-lieu-fragile/dp/2378804687/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=8JURBDGMTXQS&dib=eyJ2IjoiMSJ9.JFlUWDDniQugCPFw0FzhiOqNz-JCiQkpYznIR9OjTbiNu4IMA5yUfJ6EN7rk6DTo6hryzR36FbHHTAo5AVPic-4Y2rW1bmn-P3AnCCwpLHbtEJKoqfusCc8JEVw_gy7GMkUEgyFbMTisBJA6pa8SERPJvwNg9QUem-pc9qDcFOYxVXic01HJ7vA9y9OxAyei-6v_eUdcmwEki3ee0Cc4cq2iK_vSiRCEIdgvQeM3T2o4wkkZs8wSnH8GYlVjMRRCy8H5F8osSRbE7XwVRBxp2kCgvAw7Hacu3bLFoK-CPWatZHnTZ_oJSaCL9GjJzZj00tHPE4Qc3U2M-lCtDh74EnCDjskvM_mhZNNoPjqczOvUV72Ws3RjzymIycpT81NgX7OkIseknakz23ZrrzkCTsIZded9-ffXH30CKN9NQWaN5QNslq3z8d7YoDAsBxhO.YlG442Wp8xTswHPh4INgLsXYd84_CM2UcXT2s_0RETc&dib_tag=se&keywords=Judith+Perrignon&qid=1738232551&sprefix=judith+perrignon%2Caps%2C73&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61lV3BEbxQL._SL1097_.jpg" alt="Nous nous parlons d'un lieu où tout est fragile" class="books" /></a>
       <figcaption>
-        Vladimir Poutine
+        Judith Perrignon
       </figcaption>
       <figcaption>
-        Première personne
+        Nous nous parlons d'un lieu
       </figcaption>
       <figcaption>
-        15,00€
+        où tout est fragile
       </figcaption>
-    </figure>-->
+      <figcaption>
+        18,50€
+      </figcaption>
+    </figure>
 
     <!--Livre 98-->
     <figure>
@@ -5701,35 +5704,41 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Libre-r%C3%AAver-Franco-Baresi/dp/2889442209/ref=d_wsixn_inc_v1_sccl_2_43/257-0666022-3977509?pd_rd_w=O1H00&content-id=amzn1.sym.1bceed01-eead-4c67-be84-2e8ba6218b0e&pf_rd_p=1bceed01-eead-4c67-be84-2e8ba6218b0e&pf_rd_r=2TJ8MRCK5YQ3EJD0D8SQ&pd_rd_wg=FJ7wK&pd_rd_r=41bd4c19-91de-4676-8499-6a7857fa8550&pd_rd_i=2889442209&psc=1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/61CAM+ubLML.jpg" alt="Libre de rêver" class="books" /></a>
+      <a href="https://www.amazon.fr/DANS-FORET-HEGLAND-JEAN/dp/2351786440/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1164JC0PQDPJQ&dib=eyJ2IjoiMSJ9.nTaH7IFNP2jh9PCZrYMF9Dwdt9Uxn2z5hq2unUui9n-sAQVXJWdWgdqD5p2d7UGHPtp9GfR9Ok1U6buijNXfre2rmJfVwvPOTsKGJlt4u8ugtH_5VlmWVK1Eei4-Jcdal3OAfefflb2IOk17d_HnPLrNt3Rz4g16O760Dh1js2Z56TZDnYp6fCBdAF3Jmz3WC_E3afHpHAoLX1BL__-KHdhI9HMGedL1QyzK7EKdLKDQSQagxw3nlBocRdh-eCjUokSK9paUWN0PQTtgdiKTWcaMePTvVA3bQu5wYEkgSmw.4VdFBJfITQRqja2vh8y0Bid8JDSvrG10OlE16h1jnU4&dib_tag=se&keywords=Jean+Hegland&qid=1738232632&sprefix=jean+hegland%2Caps%2C124&sr=8-2"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/818Y2BxMpCL._SL1500_.jpg" alt="Dans la forêt" class="books" /></a>
       <figcaption>
-        Franco Baresi
+        Jean Hegland
       </figcaption>
       <figcaption>
-        Libre de rêver
+        Dans la forêt
       </figcaption>
       <figcaption>
-        12,00€
+        Livre 1 de 2
       </figcaption>
-    </figure>-->
+      <figcaption>
+        11,00€
+      </figcaption>
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Van-Basten-vie-v%C3%A9rit%C3%A9-Marco/dp/2263177590/ref=d_wsixn_inc_v1_sccl_2_46/257-0666022-3977509?pd_rd_w=O1H00&content-id=amzn1.sym.1bceed01-eead-4c67-be84-2e8ba6218b0e&pf_rd_p=1bceed01-eead-4c67-be84-2e8ba6218b0e&pf_rd_r=2TJ8MRCK5YQ3EJD0D8SQ&pd_rd_wg=FJ7wK&pd_rd_r=41bd4c19-91de-4676-8499-6a7857fa8550&pd_rd_i=2263177590&psc=1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/710HmbnH9-L.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Temps-dApr%C3%A8s-Jean-Hegland/dp/2351783050/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1164JC0PQDPJQ&dib=eyJ2IjoiMSJ9.nTaH7IFNP2jh9PCZrYMF9Dwdt9Uxn2z5hq2unUui9n-sAQVXJWdWgdqD5p2d7UGHPtp9GfR9Ok1U6buijNXfre2rmJfVwvPOTsKGJlt4u8ugtH_5VlmWVK1Eei4-Jcdal3OAfefflb2IOk17d_HnPLrNt3Rz4g16O760Dh1js2Z56TZDnYp6fCBdAF3Jmz3WC_E3afHpHAoLX1BL__-KHdhI9HMGedL1QyzK7EKdLKDQSQagxw3nlBocRdh-eCjUokSK9paUWN0PQTtgdiKTWcaMePTvVA3bQu5wYEkgSmw.4VdFBJfITQRqja2vh8y0Bid8JDSvrG10OlE16h1jnU4&dib_tag=se&keywords=Jean+Hegland&qid=1738232632&sprefix=jean+hegland%2Caps%2C124&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/81UbiD7isFL._SL1500_.jpg" alt="Le Temps d'Après" class="books" /></a>
       <figcaption>
-        Marco van Basten
+        Jean Hegland
       </figcaption>
       <figcaption>
-        Ma vie, ma vérité
+        Le Temps d'Après
       </figcaption>
       <figcaption>
-        19,90€
+        Livre 2 de 2
       </figcaption>
-    </figure>-->
+      <figcaption>
+        23,90€
+      </figcaption>
+    </figure>
 
     <!--Livre 100-->
     <figure>
@@ -6277,49 +6286,58 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Hors-moi-Yann-Moix/dp/2382921455/ref=sr_1_3?qid=1706399284" target="_blank"> <img src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/61pDyn4E6zL._SL1200_.jpg" alt="Hors de moi" class="books" /></a>
+      <a href="https://www.amazon.fr/Autant-en-emporte-vent-1/dp/2072902290/ref=pd_bxgy_d_sccl_1/257-0312289-7580746?pd_rd_w=Tm952&content-id=amzn1.sym.3dbb4249-7cc8-4963-a362-854c36cc0919&pf_rd_p=3dbb4249-7cc8-4963-a362-854c36cc0919&pf_rd_r=MJD7ZQDTVZE5AB6T69CB&pd_rd_wg=N4GgN&pd_rd_r=34716bfb-3b1b-4200-b824-062e3fe8548d&pd_rd_i=2072902290&psc=1" target="_blank"> <img src="https://m.media-amazon.com/images/I/81Z-JHakuVL._SL1500_.jpg" alt="Autant en emporte le vent" class="books" /></a>
       <figcaption>
-        Yann Moix
+        Margaret Mitchell
       </figcaption>
       <figcaption>
-        Hors de moi
+        Autant en emporte le vent
       </figcaption>
       <figcaption>
-        32,00€
+        Livre 1 de 3
       </figcaption>
-    </figure>-->
+      <figcaption>
+        13,00€
+      </figcaption>
+    </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Pourquoi-nous-dormons-Matthew-WALKER/dp/2266287230/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1706011251&sr=8-1" target="_blank"> <img
-          src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/51wxIlw5BwL._SL1311_.jpg" alt="Renee Paquette cuisine" class="books" /></a>
+      <a href="https://www.amazon.fr/Autant-en-emporte-vent-2/dp/2072902347/ref=sr_1_10?crid=3OIM11RFHOYB&dib=eyJ2IjoiMSJ9.1Kca_deWuI9OsYpGcm8aULtoBNOJspcAUs31WOtYjIAggaDE7Q6PKBFz4KKPygF53PGn_ZUK6HsHAaVuvCErG176L1Z0ksO2FwTqmdy5Xu6UPTt_SMNLsW8m8RIiugBTLyEUzD9As4H-cnsJ4Fn7TxvIaBF6nBjdLI3jQqxA56zek0sdqou5ueRlXD0UFtB5mmypj0iTlzbBl788hnuUHuZwNEUgx5eaL2FMC4XoYaTUhGkDcPwqD6Wnkl6In3ij1Qoqp4GKAQwdmBzhcmPIM8DrZ9XlJ0FnTmGE7lwB6P_Tvc04GTDGshUTi_O9mZ5K8jeIcacYvjch-Gn7_vrZ8XKioRNcXUvrOtD-5osAQnc2R4XsfEg4b92SroAqpBeuzrayBsgjc1gro8SC90tU7LONmJ2CYqHHFscECMVBkkhaQ81nF-7xHo0RuKhEeqWK.jsGbcrWD16MkYUYw-3QwjtruCRPx7dcEn0VSlBhVtBw&dib_tag=se&keywords=autant+en+emporte+le+vent&qid=1737805757&sprefix=autant+en%2Caps%2C266&sr=8-10" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71toJvG+0ML._SL1500_.jpg" alt="Autant en emporte le vent" class="books" /></a>
       <figcaption>
-        Matthew Walker
+        Margaret Mitchell
       </figcaption>
       <figcaption>
-        Pourquoi nous dormons
+        Autant en emporte le vent
       </figcaption>
       <figcaption>
-        9,20€
+        Livre 2 de 3
       </figcaption>
-    </figure>-->
+      <figcaption>
+        13,00€
+      </figcaption>
+    </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/grand-livre-boxe-Jean-Philippe-Lustyk/dp/2501147480/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jean+philippe+lustyk&qid=1628339153&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71RMGDC-AXL.jpg" alt="Le grand livre de la boxe" class="books" /></a>
+      <a href="https://www.amazon.fr/Autant-en-emporte-vent-3/dp/2070367428/ref=sr_1_12?crid=3OIM11RFHOYB&dib=eyJ2IjoiMSJ9.1Kca_deWuI9OsYpGcm8aULtoBNOJspcAUs31WOtYjIAggaDE7Q6PKBFz4KKPygF53PGn_ZUK6HsHAaVuvCErG176L1Z0ksO2FwTqmdy5Xu6UPTt_SMNLsW8m8RIiugBTLyEUzD9As4H-cnsJ4Fn7TxvIaBF6nBjdLI3jQqxA56zek0sdqou5ueRlXD0UFtB5mmypj0iTlzbBl788hnuUHuZwNEUgx5eaL2FMC4XoYaTUhGkDcPwqD6Wnkl6In3ij1Qoqp4GKAQwdmBzhcmPIM8DrZ9XlJ0FnTmGE7lwB6P_Tvc04GTDGshUTi_O9mZ5K8jeIcacYvjch-Gn7_vrZ8XKioRNcXUvrOtD-5osAQnc2R4XsfEg4b92SroAqpBeuzrayBsgjc1gro8SC90tU7LONmJ2CYqHHFscECMVBkkhaQ81nF-7xHo0RuKhEeqWK.jsGbcrWD16MkYUYw-3QwjtruCRPx7dcEn0VSlBhVtBw&dib_tag=se&keywords=autant+en+emporte+le+vent&qid=1737805757&sprefix=autant+en%2Caps%2C266&sr=8-12" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/81Re1QTOJ6L._SL1500_.jpg" alt="Autant en emporte le vent" class="books" /></a>
       <figcaption>
-        Jean-Phillipe Lustyk
+        Margaret Mitchell
       </figcaption>
       <figcaption>
-        Le grand livre de la boxe
+        Autant en emporte le vent
       </figcaption>
       <figcaption>
-        35,00€
+        Livre 3 de 3
       </figcaption>
-    </figure>-->
+      <figcaption>
+        Rupture de stock
+      </figcaption>
+    </figure>
   </div>
 
   <div class="booksLine">
