--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <navbar>
     <ul>
       <li><a href="index.html">Accueil</a></li>
-      <li><a href="jeuxvideo.html">Jeux Vidéo</a></li>
+      <li><a href="religion.html">Jeux Vidéo</a></li>
       <li><a href="livres.html">Livres</a></li>
       <li><a href="autres.html">Autres</a></li>
     </ul>
@@ -29,7 +29,7 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 30 janvier 2025
+    Mise à jour liste le 14 février 2025
   </p>
   <p class="dateMAJ2">
     Mise à jour prix : la flemme
