--- a/religion.html
+++ b/religion.html
@@ -36,67 +36,67 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2--->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/dp/B09Z91B5FZ/?_encoding=UTF8&colid=74X0E2D6I7EP&coliid=I248WIB3KSO4UE&psc=1&ref_=nav_ya_signin"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/91g+-NPORYL._SL1500_.jpg" alt="Le Saint Suaire de Turin" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Jean-Christian Petitfils
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Le Saint Suaire de Turin
       </figcaption>
       <figcaption>
-        2,70€
+        26,00€
       </figcaption>
-    </figure>--->
+    </figure>
 
-    <!--Jeu 3
+    <!--Jeu 3-->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/Pri%C3%A8res-chaque-instant-pri%C3%A8res-pourrez/dp/B08SGG954B/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=IHYB594PS66P&dib=eyJ2IjoiMSJ9.IsZS1Zqf1EBqr9gGDHcdjT5OeJDWUVInM_KVPPXU062jMQGIlDmJxTXxmg1mblih9xsZuNoyGJrao88X_ryfsQAz3JuCl3n7fm5SJ17lMLDL_h_Ae6w6Y_vShGKdtvNbb9zSrIZGtCSsyj0HctqkLQHrApDRkPVpXd2xsfqyjU9FgLiI7bomI77R0ytE3_gqo8DEl_WtDPR8qnuIMJrZB5Ph9a6Yj7cErcW6LRhGoFTJsIKj0pPNf3Zq2zQQGqUnnt66Ibbl6L6UZ_Zk9dXd0SKhignW0fnTJPKgaIwk6F4.ELgEnHSFhsYjIm2DLrEoKYpVZcy0yhfIJYDuVkcPwBU&dib_tag=se&keywords=priere+de+chaque+instant&qid=1721241211&sprefix=priere+de+chaque+instant%2Caps%2C82&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71BheXy9jpL._SL1500_.jpg" alt="Prières de chaque instant" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Père Pierre Amar
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Prières de chaque instant
       </figcaption>
       <figcaption>
-        2,70€
+        9,90€
       </figcaption>
-    </figure>--->
+    </figure>
 
-    <!--Jeu 4
+    <!--Jeu 4-->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/Symbolisme-du-corps-humain/dp/2226463402/ref=tmm_mmp_swatch_0?_encoding=UTF8&dib_tag=se&dib=eyJ2IjoiMSJ9.SXKPF8G7BkyLeb31s-WeVUTeQQNR9BJM2EKDJPatfQPoS9A-S5zDrIxrBiJ7Pg9Qh3f9E9p1BVGFOJRGGvO9y48f95qf2skv_TZVhc-5D-vycNU4AgSJobHVwT4IsNpd2AEJhytmkLfqmX-NG8dRPmsRzWmd401NemVGAWbykDeF31EP0LuaP7LjGGjjvWXJ.uEa8Yt8GHbeVPl1qMTqJa51OS5qw7GhIVg3Xuu6UxqM&qid=1723830553&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61BORgdFVrL.jpg" alt="Le Symbolisme du corps humain" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Annick de Souzenelle
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Le Symbolisme du corps humain
       </figcaption>
       <figcaption>
-        2,70€
+        12,90€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="gamesLine">
-    <!--Jeu 1
+    <!--Jeu 1-->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/Fran%C3%A7ois-dAssise-parfaite-Stephane-Barsacq/dp/2757805061/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=52EXTS01Q4NE&dib=eyJ2IjoiMSJ9.bWxFjxfEY83gkPH6QIR1a5HyOuKe0QTTzIq-YHUivnbYFcWZR17J1v176cTMTgS346F8e8nlPWOcCeD-yEd0LpKN2BqwpSDdXbcWe1heiGX4x4J-mkHAB6HkKX5qmtJ3cj8rdDsdSOZ5rYFSWx0Q58v-tcVs-2R1xjLr_FxPfU333HPuKVTgbRux-ym9iKNmIcfymXQHnPEXvUsU0BEJFQ1MYqb7fQo8oiIeG6-frI3kbknWoAgXA_R61u-bEIKH_nRvAIaWuiegknSX7UG0IaCldYflXAQcVx5G-i3knCs.ZDaSU4_kaUUH4XOEFvwPOo1_Q8lVlPlnyvTEZSxWtkw&dib_tag=se&keywords=la+joie+parfaite&qid=1723830602&sprefix=la+joie+parfait%2Caps%2C92&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/712PEyTQ+gL._SL1319_.jpg" alt="La joie parfaite" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        François d'Assise
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        La joie parfaite
       </figcaption>
       <figcaption>
-        2,70€
+        7,90€
       </figcaption>
-    </figure>--->
+    </figure>
 
     <!--Jeu 2
     <figure>
