--- a/religion.html
+++ b/religion.html
@@ -14,7 +14,7 @@
   <navbar>
     <ul>
       <li><a href="index.html">Accueil</a></li>
-      <li><a href="jeuxvideo.html">Jeux Vidéo</a></li>
+      <li><a href="religion.html">Religion</a></li>
       <li><a href="livres.html">Livres</a></li>
       <li><a href="autres.html">Autres</a></li>
     </ul>
