--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 14 février 2025
+    Mise à jour liste en cours
   </p>
   <p class="dateMAJ2">
-    Mise à jour prix : la flemme
+    Mise à jour prix : à venir
   </p>
 
 </body>
