--- a/religion.html
+++ b/religion.html
@@ -470,82 +470,91 @@
   </div>
 
   <div class="gamesLine">
-    <!--Jeu 1
+    <!--Jeu 1--->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/Cat%C3%A9chisme-vie-spirituelle-Robert-Sarah/dp/2818507731/ref=tmm_mmp_swatch_0?_encoding=UTF8&dib_tag=se&dib=eyJ2IjoiMSJ9.iTTMUYrjYoAT-jE9ZFBGxUV95q7pytbkXHVdLXjTDmXYqtePLzaDvxj0PSs3oTJccpagI61mB9HrXhM9hslrWbGcq21TPHNqDHw4IRG6osPyhkvJNS0L3qUuEIKSL26Ynyasc4UBtBBCeLaKIWxgavipm02mDmO6fsZKiGda2IWU-EK8JqhPAgLvH7u5VYx_XOaP5gDEO_f7FYdS0aPc-w0bMmPBMDoUx8gVqfS5r9a3vur4pDkfBjzL09QWtiUq-COMvwFd3QTPDWlxeINea-7negMC0p0oDj7QDXkn0GO4dB8OfXAquM17-_op6cLPlzTLi8OdEexfJZg2L8C5MpDXEpZkl_Be1IJ_V5oQXzbUTg9LBGEaiL4-pZSpub67WVTgoImyvPJohTcnKVVTcEvjfRH_rx-59dC5Efq0JJBrf9HZN1Jy6DzvXnaCVoNs.HD5Hq5FYsq7yiinEbOvZnXGjCzkyv8B4VVREghnYI0g&qid=1740587034&sr=8-4"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/81moLOZSaQL._SL1500_.jpg" alt="Catéchisme de la vie spirituelle" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Robert Sarah
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Catéchisme de
       </figcaption>
       <figcaption>
-        2,70€
+        la vie spirituelle
       </figcaption>
-    </figure>--->
+      <figcaption>
+        12,00€
+      </figcaption>
+    </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2--->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/Soyons-saints-M%C3%A9thode-pour-g%C3%A2cher/dp/2365263887/?_encoding=UTF8&pd_rd_w=ovzX6&content-id=amzn1.sym.46807d81-91bd-498b-9732-d523d8e7a752%3Aamzn1.symc.fc11ad14-99c1-406b-aa77-051d0ba1aade&pf_rd_p=46807d81-91bd-498b-9732-d523d8e7a752&pf_rd_r=511QDGP7642HTSBYMZSA&pd_rd_wg=3B4VT&pd_rd_r=44ccd234-43f8-46ec-a2c9-85220f3c6718&ref_=pd_hp_d_atf_ci_mcx_mr_ca_hp_atf_d"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/7146HcULdBL._SL1500_.jpg" alt="Soyons saints" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Le catho de service
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Soyons saints
       </figcaption>
       <figcaption>
-        2,70€
+        18,00€
       </figcaption>
-    </figure>--->
+    </figure>
 
-    <!--Jeu 3
+    <!--Jeu 3--->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/Sainte-Gemma-Galgani-Autobiographie-Journal/dp/B096TTV68D/ref=wsixn_inc_v1_d_sccl_1_10/257-0312289-7580746?pd_rd_w=KB0G1&content-id=amzn1.sym.d4bdbf2e-946e-413e-882c-8fbc450cf8bc&pf_rd_p=d4bdbf2e-946e-413e-882c-8fbc450cf8bc&pf_rd_r=P73129R5W5SGXK1RP50G&pd_rd_wg=JLC0x&pd_rd_r=fd5d78d2-abf7-40a2-9f13-c0cf3ed661b3&pd_rd_i=B096TTV68D&psc=1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61sv95WAjlS._SL1500_.jpg" alt="Sainte Gemma Galgani" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Jocelyn Girard
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Sainte Gemma Galgani
       </figcaption>
       <figcaption>
-        2,70€
+        8,90€
       </figcaption>
-    </figure>--->
+    </figure>
 
-    <!--Jeu 4
+    <!--Jeu 4-->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/v%C3%A9ritable-histoire-Sainte-Rita-Lavocate/dp/2262016623/ref=wsixn_inc_v1_d_sccl_1_11/257-0312289-7580746?pd_rd_w=KB0G1&content-id=amzn1.sym.d4bdbf2e-946e-413e-882c-8fbc450cf8bc&pf_rd_p=d4bdbf2e-946e-413e-882c-8fbc450cf8bc&pf_rd_r=P73129R5W5SGXK1RP50G&pd_rd_wg=JLC0x&pd_rd_r=fd5d78d2-abf7-40a2-9f13-c0cf3ed661b3&pd_rd_i=2262016623&psc=1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/51MQY2uxccL._SL1223_.jpg" alt="La véritable histoire de Sainte Rita" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Yves Chiron
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        La véritable histoire
       </figcaption>
       <figcaption>
-        2,70€
+        de Sainte Rita
       </figcaption>
-    </figure>-->
+      <figcaption>
+        17,30€
+      </figcaption>
+    </figure>
   </div>
 
   <div class="gamesLine">
-    <!--Jeu 1
+    <!--Jeu 1--->
     <figure>
-      <a href="https://www.amazon.fr/Hurrah-Zurra-Jean-Raspail/dp/2226100083/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=36ZLAPCMXW0Q9&dib=eyJ2IjoiMSJ9.JmVLBXLK6Sg_MEKwx8x8nw.3FnIC7aptFYWiVuuQska3PrCuUIZjZfAyyTL1HxcF2E&dib_tag=se&keywords=hurrah+zara&qid=1722015804&sprefix=hurrah+zara%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/91GlUOYwuQL._SL1500_.jpg" alt="Mea Culpa" class="books" /></a>
+      <a href="https://www.amazon.fr/Introduction-d%C3%A9vote-Sales-saint-Fran%C3%A7ois/dp/2020236109/ref=wsixn_inc_v1_d_sccl_2_4/257-0312289-7580746?pd_rd_w=21eUN&content-id=amzn1.sym.d4bdbf2e-946e-413e-882c-8fbc450cf8bc&pf_rd_p=d4bdbf2e-946e-413e-882c-8fbc450cf8bc&pf_rd_r=AQKH92V1N9RHABEN4WBE&pd_rd_wg=MZkvv&pd_rd_r=8d3857fd-b02a-4e0d-af8c-344c9ae0194d&pd_rd_i=2020236109&psc=1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71recKhJbNL._SL1318_.jpg" alt="Introduction à la vie dévote" class="books" /></a>
       <figcaption>
-        Jean Raspail
+        Saint François de Sales
       </figcaption>
       <figcaption>
-        Hurrah Zara !
+        Introduction à la vie dévote
       </figcaption>
       <figcaption>
-        2,70€
+        vie dévote
       </figcaption>
-    </figure>--->
+      <figcaption>
+        9,30€
+      </figcaption>
+    </figure>
 
     <!--Jeu 2
     <figure>
