--- a/livres.html
+++ b/livres.html
@@ -1438,8 +1438,8 @@
 
     <!--Livre 84-->
     <figure>
-      <a href="https://www.amazon.fr/Prince-Machiavel-%C3%89dition-compl%C3%A8te-originale/dp/B08SBDX8SQ/ref=sr_1_1?crid=15DGAZMLTX4PW&dib=eyJ2IjoiMSJ9.NSv8qu2FOvvz-QaIGFhV1yj--axusWkaHsE3FapRRkAPeBpnxt5_uJb6SvyyWRhB2rnIo80iqRW27nOtKGmDE_vdbvsTNprP-CRXz86JEJi0ZrmU5trMM_q4Ax3TMPHBAz360v_riQYucq3oCMaHyg0YBzktGO34cQgw9VGYrmy268iL6cHZuVf2dyy6kpp-HDWxC5f5HhZNsstwEli4aXGKHz9M78ZTkXj4VSULHOW6NnGz1v1WBSGrBNvb1AyrkF6trc4m1JvsF-o6T_Lrpl3tw4yxqQwb13-K6x60V_Y.Cuib7W_2lnCJ9eoRDqaNZPTUfYgrq66c13S37zojYQo&dib_tag=se&keywords=le+prince+de+machiavel&qid=1724684298&sprefix=prince+mac%2Caps%2C84&sr=8-1"
-        target="_blank"> <img src="https://c.media-amazon.com/images/I/61T6S5V8rKL._SL1500_.jpg" alt="Le Prince" class="books" /></a>
+      <a href="https://www.amazon.fr/Prince-Nicolas-Machiavel/dp/2070344835/ref=sr_1_7?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=YWO79XNX74AW&dib=eyJ2IjoiMSJ9.NSv8qu2FOvvz-QaIGFhV1xc4q41jBXhvoLkmuS_EHl3WpG9__AZ2Il-ggnwBVZ1FEWJoqH-v7FPhPMjHd0QoedQyQ8OTnhZ7EakDjn5dcm_Cp5H2ZQhctw0nsVpB23e-Yp-BaAVSTYMY2zT5qYO9MbgDKceRm9sn1x8t3sosjTeaLGeNd4gqaA9o2KmxG9-lR4X1ZEFTo94kW7F79Ts4-0GDj8kynrIS-G2Olx2m-0feiVI6_S--6yP7kMgqNlkp0Rq7Hxdu7yr3JKt28H9e5X_KWE9bX_BEAnY50dlQQ5mKz0GWTJbF1aaVfFrzxDFXmgSgI2MDD7PiXEqFt5E_h5GNdKO455YXjUw4G-gSZZL752mlHXZ4Qosg3YngupWLi1o6gviBsMpyCxniAlfu5so2AsdIvHQDF2lWAyg8WYoOAe1MSxmo5AbKG6QqY4_C.ZFJu_CNnsLMkXQafR_IefQ6noAGYPANpVi-6sLJvp9I&dib_tag=se&keywords=le+prince+de+machiavel&qid=1740590637&sprefix=le+prince+de+machiavel%2Caps%2C80&sr=8-7"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71cJCTdEdbL._SL1051_.jpg" alt="Le Prince" class="books" /></a>
       <figcaption>
         Nicolas Machiavel
       </figcaption>
@@ -1447,7 +1447,7 @@
         Le Prince
       </figcaption>
       <figcaption>
-        6,99€
+        9,09€
       </figcaption>
     </figure>
   </div>
@@ -1950,7 +1950,7 @@
     <!--Livre 116-->
     <figure>
       <a href="https://www.amazon.fr/ma%C3%AEtresse-italienne-Jean-Marie-Rouart/dp/2073041086/ref=sr_1_1?crid=1Z4QDAE93C8RS&keywords=la+maitresse+italienne+rouart&qid=1707317801&sprefix=la+maitresse+it%2Caps%2C100&sr=8-1" target="_blank"> <img
-          src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/81Rl-7mcofL._SL1500_.jpg" alt="La maîtresse italienne" class="books" /></a>
+          src="https://m.media-amazon.com/images/I/81Rl-7mcofL._SL1500_.jpg" alt="La maîtresse italienne" class="books" /></a>
       <figcaption>
         Jean-Marie Rouart
       </figcaption>
@@ -1967,7 +1967,7 @@
     <!--Livre 117-->
     <figure>
       <a href="https://www.amazon.fr/Comment-retrouv%C3%A9-Xavier-Dupont-Ligonn%C3%A8s/dp/2226483551/ref=sr_1_1?crid=3C2J68SHNDXWN&keywords=comment+j%27ai+retrouv%C3%A9+xavier+dupont+de+ligonn%C3%A8s&qid=1707525741&sprefix=dupont%2Caps%2C223&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/719wUg+MjfL._SL1500_.jpg" alt="Comment j'ai retrouvé Xavier Dupont de Ligonnès" class="books" /></a>
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/719wUg+MjfL._SL1500_.jpg" alt="Comment j'ai retrouvé Xavier Dupont de Ligonnès" class="books" /></a>
       <figcaption>
         Romain Puértolas
       </figcaption>
@@ -6266,7 +6266,7 @@
     <!--Livre 100-->
     <figure>
       <a href="https://www.amazon.fr/Autopsies-Chroniques-dun-m%C3%A9decin-l%C3%A9giste/dp/2266330489/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img
-          src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/71GKx6aiwtL._SL1311_.jpg" alt="Autopsies" class="books" /></a>
+          src="https://m.media-amazon.com/images/I/71GKx6aiwtL._SL1311_.jpg" alt="Autopsies" class="books" /></a>
       <figcaption>
         Michel Sapanet
       </figcaption>
@@ -6282,7 +6282,7 @@
   <div class="booksLine">
     <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/En-direct-morgue-Michel-SAPANET/dp/2266313762/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/61BiHgZygNL._SL1311_.jpg"
+      <a href="https://www.amazon.fr/En-direct-morgue-Michel-SAPANET/dp/2266313762/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://m.media-amazon.com/images/I/61BiHgZygNL._SL1311_.jpg"
           alt="En direct de la morgue" class="books" /></a>
       <figcaption>
         Michel Sapanet
