--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste en cours
+    Mise à jour liste le 03 mars 2025
   </p>
   <p class="dateMAJ2">
     Mise à jour prix : à venir
