--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     Mise à jour liste le 03 mars 2025
   </p>
   <p class="dateMAJ2">
-    Mise à jour prix : à venir
+    Mise à jour prix le 04 mars 2025
   </p>
 
 </body>
