--- a/religion.html
+++ b/religion.html
@@ -488,7 +488,7 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 2--->
+    <!--Jeu 2
     <figure>
       <a href="https://www.amazon.fr/Soyons-saints-M%C3%A9thode-pour-g%C3%A2cher/dp/2365263887/?_encoding=UTF8&pd_rd_w=ovzX6&content-id=amzn1.sym.46807d81-91bd-498b-9732-d523d8e7a752%3Aamzn1.symc.fc11ad14-99c1-406b-aa77-051d0ba1aade&pf_rd_p=46807d81-91bd-498b-9732-d523d8e7a752&pf_rd_r=511QDGP7642HTSBYMZSA&pd_rd_wg=3B4VT&pd_rd_r=44ccd234-43f8-46ec-a2c9-85220f3c6718&ref_=pd_hp_d_atf_ci_mcx_mr_ca_hp_atf_d"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/7146HcULdBL._SL1500_.jpg" alt="Soyons saints" class="books" /></a>
@@ -501,7 +501,7 @@
       <figcaption>
         18,00€
       </figcaption>
-    </figure>
+    </figure>--->
 
     <!--Jeu 3--->
     <figure>
