retrait encycliques Benoit 16

--- a/religion.html
+++ b/religion.html
@@ -766,7 +766,7 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 2--->
+    <!--Jeu 2
     <figure>
       <a href="https://www.amazon.fr/gp/product/2204081256?ie=UTF8&tag=babelio-21&linkCode=as2&camp=1642&creative=6746&creativeASIN=2204081256"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/41ncuVlukFL.jpg" alt="Dieu est amour" class="books" /></a>
@@ -779,9 +779,9 @@
       <figcaption>
         4,40€
       </figcaption>
-    </figure>
+    </figure>--->
 
-    <!--Jeu 3--->
+    <!--Jeu 3
     <figure>
       <a href="https://www.amazon.fr/gp/product/2204086312?ie=UTF8&tag=babelio-21&linkCode=as2&camp=1642&creative=6746&creativeASIN=2204086312"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/61p1t9BSS6L._SL1000_.jpg" alt="Sauvés dans l'espérance" class="books" /></a>
@@ -794,9 +794,9 @@
       <figcaption>
         4,00€
       </figcaption>
-    </figure>
+    </figure>--->
 
-    <!--Jeu 4--->
+    <!--Jeu 4
     <figure>
       <a href="https://www.amazon.fr/LAMOUR-DANS-VERITE-COLLECTIF/dp/2204087335/257-0312289-7580746?pd_rd_w=5dHjV&content-id=amzn1.sym.6d74588d-d473-4523-ade2-87afcdbad55e&pf_rd_p=6d74588d-d473-4523-ade2-87afcdbad55e&pf_rd_r=9PM6DVEZYTTQZ7RZJYAS&pd_rd_wg=RxpJM&pd_rd_r=a7412c66-08e9-4348-958e-b05eadde6e7f&pd_rd_i=2204087335&psc=1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/41+Oa9TuRAL.jpg" alt="L'amour dans la vérité" class="books" /></a>
@@ -809,7 +809,7 @@
       <figcaption>
         5,00€
       </figcaption>
-    </figure>
+    </figure>--->
   </div>
 
   <div class="gamesLine">
